k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slag
  labels:
    name: slag
    app.kubernetes.io/name: slag
